<resources>
    <string name="app_name">VR Market</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="privacy">Privacy Policy</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="category">Category</string>
    <string name="sort">Sort by</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="url">http://netforcesales.com/vrmarket/api.php</string>
    <string name="appkey">f3paovxgzfv5jj2pzus2wnfdvdaaeopc</string>
    <string name="no_featured_app">No featured app</string>
    <string name="no_app_found">No app found</string>
    <string name="curl">http://netforcesales.com/vrmarket/capi.php</string>
    <string name="surl">http://netforcesales.com/vrmarket/sapi.php</string>
    <string name="purl">http://netforcesales.com/vrmarket/page.php</string>
    <string name="gamefragment">GameFragment</string>
    <string name="ok">OK</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="share">Share</string>
    <string name="send_to">Share it with...</string>
</resources>
